Apply unified Liquid Glass holographic theme across all pages
## Summary
Complete implementation of the unified Liquid Glass holographic theme
across the entire GadgetCloud Angular application for consistent
visual experience.

## Pages Updated with Liquid Glass Theme

### Authentication
- Login/Signup page enhanced with improved label visibility

### Customer Portal
- Customer Dashboard with holographic device cards

### Partner Portal
- Partner Dashboard with repair management focus

### Support Portal
- Support Dashboard with ticket queue interface

### Admin Portal
- Admin Dashboard with platform statistics
- User Management with user cards grid
- Audit Logs with log viewer
- Permissions management

### Common Pages
- Profile page with user info management
- Settings page with preferences controls
- Help & Support page with FAQ and contact channels

## Design Elements

### Liquid Glass Aesthetic
- Deep black backgrounds (#0a0e27, #0f1729)
- Electric blue/cyan neon colors (#0ea5e9, #06b6d4, #3b82f6, #22d3ee)
- Orbitron (display font) + Exo 2 (body font)
- Glass morphism with backdrop-filter blur
- Neon borders and glow effects

### Visual Components
- Animated liquid background with 3 floating blobs (25s animation)
- Cyber grid overlay with sliding animation (30s)
- 6 floating holographic particles with varied colors
- Glass cards with scan line effects on hover
- Neon buttons with glow states

### Animations & Effects
- liquidFloat - Blob movement animation
- gridSlide - Cyber grid animation using transform (GPU optimized)
- particleFloat - Particle movement with scale and opacity
- Card hover effects with lift and scan lines
- Staggered reveal animations for content

## Bug Fixes

### Global Styles
- Added CSS reset to remove default body/html margins
- Fixed white lines at top and left edges of viewport

### Login Page Labels
- Fixed floating label positioning and visibility
- Updated label colors for better readability
- Improved label transform animations
- 

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "site": "gadgetcloud-app-prd",
+    "site": "gadgetcloud-stg",
     "public": "dist/gc-ng-app/browser",
     "ignore": [
       "firebase.json",
